--- a/static/css/override.css
+++ b/static/css/override.css
@@ -138,7 +138,7 @@ header {
   justify-self: center;
 }
 .card-reveal-grid__row6--item {
-  background-color: #26a69a;
+  background-color: #86B3D0;
   color: white;
   font-size: 1rem;
   padding: 0.5rem 1rem;
@@ -158,8 +158,7 @@ header {
   display: inline-block;
   height: 2rem;
   line-height: 2rem;
-  background-color: #ee6e73;
-  color: white;
+  background-color: #d8d9dd;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .card-reveal-grid__row9 {
@@ -236,8 +235,7 @@ header {
 .idea-details__category--item {
   grid-row: 2;
   grid-column: 2;
-  background-color: blue;
-  color: white;
+  background-color: #86B3D0;
   text-align: center;
   padding: 0.5rem;
   line-height: 2rem;
@@ -258,10 +256,9 @@ header {
 }
 .idea-details__tags--row2--item {
   justify-self: center;
-  background-color: #ee6e73;
+  background-color: #d8d9dd;
   display: inline-block;
   line-height: 2rem;
-  color: white;
   padding: 0.5rem;
   width: 90%;
   text-align: center;
