--- a/static/css/scss/_colors.scss
+++ b/static/css/scss/_colors.scss
@@ -1,8 +1,11 @@
 $froly: #ee6e73;
 $jungle_green: #26a69a;
-$tagcolor: #ee6e73;
+$tagcolor: #d8d9dd;
 
 $mainBlue: #e0f0fa;
 $mainOrange: #d59541;
 $mainPink: #e84d74;
+$secPink: #FE8C54;
 $mainGrey: #d8d9dd;
+$secBlue: #86B3D0;
+$secGreen: #8DDDC1;
