--- a/static/css/scss/_idea_card.scss
+++ b/static/css/scss/_idea_card.scss
@@ -75,7 +75,7 @@
         justify-self: center;
 
         &--item {
-            background-color: #26a69a;
+            background-color: $secBlue;
             color: white;
             font-size: 1rem;
             padding: 0.5rem 1rem;
@@ -99,8 +99,7 @@
             display: inline-block;
             height: 2rem;
             line-height: 2rem;
-            background-color: #ee6e73;
-            color: white;
+            background-color: $tagcolor;
             box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
         }
     }
