--- a/static/css/scss/_colors.scss
+++ b/static/css/scss/_colors.scss
@@ -5,6 +5,7 @@ $tagcolor: #d8d9dd;
 $mainBlue: #e0f0fa;
 $mainOrange: #d59541;
 $mainPink: #e84d74;
+$darkPink: #D62955;
 $secPink: #FE8C54;
 $mainGrey: #d8d9dd;
 $secBlue: #86B3D0;
