Fix issue with flask path no logo showing.

--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -5,7 +5,7 @@
     </div>
     <div class="site-nav__overlay">
         <div class="site-nav__overlay-content">
-            <img class="logo" src="static/images/chingu-logo-cropped.png" alt="">
+            <img class="logo" src="../static/images/chingu-logo-cropped.png" alt="logo">
             <nav class="primary-nav">
                 <ul>
                     <li><a href="{{url_for('home')}}">Home</a></li>
