--- a/static/css/override.css
+++ b/static/css/override.css
@@ -62,6 +62,17 @@ header {
   background-color: #e84d74;
 }
 
+.btn-secundary {
+  height: 36px;
+  line-height: 36px;
+  padding: 0 16px;
+  text-transform: uppercase;
+  background-color: #e0f0fa;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  color: black;
+  font-weight: 600;
+}
+
 .btn:focus, .btn-large:focus, .btn-small:focus, .btn-floating:focus {
   background-color: #D62955;
 }
