--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -61,6 +61,18 @@ header {
     background-color: $mainPink;
 }
 
+.btn-secundary {
+    height: 36px;
+    line-height: 36px;
+    padding: 0 16px;
+    text-transform: uppercase;
+    background-color: $mainBlue;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    color: black;
+    font-weight: 600;
+    
+}
+
 .btn:focus, .btn-large:focus, .btn-small:focus, .btn-floating:focus {
     background-color: $darkPink;
 }
