--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -70,6 +70,10 @@ header {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     color: black;
     font-weight: 600;
+
+    &:focus {
+        background-color: $secBlue;
+    }
     
 }
 
