--- a/templates/pages/ideas/edit_idea.html
+++ b/templates/pages/ideas/edit_idea.html
@@ -1,134 +1,100 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<h1>Edit idea</h1>
-<div class="row">
-    <form action="{{ url_for('update_idea', idea_id=idea._id) }}" method="POST" class="col s12">
+<h3>Edit idea</h3>
+<div class="edit-idea">
+    <form action="{{ url_for('update_idea', idea_id=idea._id) }}" method="POST">
 
         <!-- Set idea name -->
-        <div class=" row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">assignment</i>
-                    <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50"
-                        maxlength="50">{{idea.idea_title}}</textarea>
-                    <label for="icon_prefix">Idea Name (max. 50 characters)</label>
-                </div>
-            </div>
-        </div>
-
-        <!-- Set category -->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">poll</i>
-                <select id="category" name="category_name">
-                    <option value="" disabled selected>Choose Category</option>
-                    {% for cat in categories %}
-                    {% if cat.category_name ==
-                idea.category_name%}
-                    <option value="{{cat.category_name}}" selected>{{cat.category_name}}</option>
-                    {% else %}
-                    <option value="{{cat.category_name}}">{{cat.category_name}}</option>
-                    {% endif %} {% endfor %}
-                </select>
-                <label>Select a category</label>
-            </div>
+        <div class="input-field">
+            <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50"
+                maxlength="50">{{idea.idea_title}}</textarea>
+            <label>Idea Name (max. 50 characters)</label>
         </div>
 
         <!-- Set short description -->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">subject</i>
-                <textarea name="idea_summary" id="textarea2" class="materialize-textarea" data-length="120"
-                    maxlength="120">{{idea.idea_summary}}</textarea>
-                <label for="icon_telephone">Describe your idea in a short sentence (max. 130 characters)</label>
-            </div>
+        <div class="input-field">
+            <textarea name="idea_summary" id="textarea2" class="materialize-textarea" data-length="120"
+                maxlength="120">{{idea.idea_summary}}</textarea>
+            <label>Describe your idea in a short sentence (max. 130 characters)</label>
         </div>
 
         <!-- Set details -->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">subject</i>
-                <textarea name="idea_details" id="textarea3" class="materialize-textarea" data-length="1000"
-                    maxlength="1000">{{idea.idea_details}}</textarea>
-                <label for="icon_telephone">Idea Details</label>
-            </div>
+        <div class="input-field">
+            <textarea name="idea_details" id="textarea3" class="materialize-textarea" data-length="1000"
+                maxlength="1000">{{idea.idea_details}}</textarea>
+            <label>Idea Details</label>
+        </div>
+
+        <!-- Set category -->
+        <div class="input-field">
+            <select id="category" name="category_name">
+                <option value="" disabled selected>Choose Category</option>
+                {% for cat in categories %}
+                {% if cat.category_name ==
+            idea.category_name%}
+                <option value="{{cat.category_name}}" selected>{{cat.category_name}}</option>
+                {% else %}
+                <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                {% endif %} {% endfor %}
+            </select>
+            <label>Select a category</label>
         </div>
 
         <!-- Set tag -->
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">poll</i>
-                    <select id="idea_tag1" name="idea_tag1">
-                        <option value="" disabled selected>Choose Tag</option>
-                        {% for tag in all_tags %} {% if tag.tag_name ==
-                    idea.idea_tag1%}
-                        <option value="{{tag.tag_name}}" selected>{{tag.tag_name}}</option>
-                        {% else %}
-                        <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
-                        {% endif %} {% endfor %}
-                    </select>
-                    <label>Select a tag for your idea</label>
-                </div>
-            </div>
+        <div class="input-field">
+            <select id="idea_tag1" name="idea_tag1">
+                <option value="" disabled selected>Choose Tag</option>
+                {% for tag in all_tags %} {% if tag.tag_name ==
+            idea.idea_tag1%}
+                <option value="{{tag.tag_name}}" selected>{{tag.tag_name}}</option>
+                {% else %}
+                <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
+                {% endif %} {% endfor %}
+            </select>
+            <label>Select a tag for your idea</label>
         </div>
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">poll</i>
-                    <select id="idea_tag2" name="idea_tag2">
-                        <option value="" disabled selected>Choose Tag</option>
-                        {% for tag2 in all_tags_two %} {% if tag2.tag_name ==
-                    idea.idea_tag2%}
-                        <option value="{{tag2.tag_name}}" selected>{{tag2.tag_name}}</option>
-                        {% else %}
-                        <option value="{{tag2.tag_name}}">{{tag2.tag_name}}</option>
-                        {% endif %} {% endfor %}
-                    </select>
-                    <label>Select a tag for your idea</label>
-                </div>
-            </div>
+
+        <div class="input-field">
+            <select id="idea_tag2" name="idea_tag2">
+                <option value="" disabled selected>Choose Tag</option>
+                {% for tag2 in all_tags_two %} {% if tag2.tag_name ==
+            idea.idea_tag2%}
+                <option value="{{tag2.tag_name}}" selected>{{tag2.tag_name}}</option>
+                {% else %}
+                <option value="{{tag2.tag_name}}">{{tag2.tag_name}}</option>
+                {% endif %} {% endfor %}
+            </select>
+            <label>Select a tag for your idea</label>
         </div>
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">poll</i>
-                    <select id="idea_tags3" name="idea_tag3">
-                        <option value="" disabled selected>Choose Tag</option>
-                        {% for tag3 in all_tags_three %} {% if tag3.tag_name ==
+
+        <div class="input-field">
+            <select id="idea_tags3" name="idea_tag3">
+                <option value="" disabled selected>Choose Tag</option>
+                {% for tag3 in all_tags_three %} {% if tag3.tag_name ==
                     idea.idea_tag3%}
-                        <option value="{{tag3.tag_name}}" selected>{{tag3.tag_name}}</option>
-                        {% else %}
-                        <option value="{{tag3.tag_name}}">{{tag3.tag_name}}</option>
-                        {% endif %} {% endfor %}
-                    </select>
-                    <label>Select a tag for your idea</label>
-                </div>
-            </div>
+                <option value="{{tag3.tag_name}}" selected>{{tag3.tag_name}}</option>
+                {% else %}
+                <option value="{{tag3.tag_name}}">{{tag3.tag_name}}</option>
+                {% endif %} {% endfor %}
+            </select>
+            <label>Select a tag for your idea</label>
         </div>
 
+        <!-- Not editable, so invisible: fixed username -->
+        <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
+            value="{{session['username']}}">
 
-        <!-- Fixed username -->
-        <div class="row">
-            <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
-                value="{{session['username']}}">
+        <!-- Not editable, so invisible: fixed total votes -->
+        <input type="hidden" name="total_votes" id="total_votes" class="materialize-textarea" value="{{total_votes}}">
+
+        <div class="edit-idea__cta">
+            <button class="btn waves-effect waves-light" type="submit" name="action">
+                Update Idea
+            </button>
+            <a href="{{url_for('idea_details', idea_id=idea._id)}}"
+                class="waves-effect waves-light btn-secundary">cancel</a>
         </div>
-        <!-- Fixed total votes -->
-        <div class="row">
-            <input type="hidden" name="total_votes" id="total_votes" class="materialize-textarea"
-                value="{{total_votes}}">
-        </div>
-
-</div>
-
-<div class="row">
-    <button class="btn waves-effect waves-light" type="submit" name="action">
-        Update Idea
-        <i class="material-icons right">playlist_add</i>
-    </button>
-    <a href="{{url_for('idea_details', idea_id=idea._id)}}" class="waves-effect waves-light btn">cancel</a>
-</div>
-</form>
+    </form>
 </div>
 {% endblock %}
