--- a/static/css/override.css
+++ b/static/css/override.css
@@ -219,15 +219,20 @@ textarea.materialize-textarea:focus:not([readonly]) {
   margin-top: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 2rem;
 }
 .idea-details__edit-idea--item {
   justify-self: center;
 }
-.idea-details__edit-image {
-  display: grid;
-  padding: 1rem 0;
+.idea-details__edit-idea--item--left {
+  justify-self: right;
 }
-.idea-details__edit-image--item {
+.idea-details__edit-idea--item--right {
+  justify-self: left;
+}
+.idea-details__edit-idea--delete {
+  grid-row: 2;
+  grid-column: 1/3;
   justify-self: center;
 }
 .idea-details__cta {
