--- a/static/css/scss/_idea_details.scss
+++ b/static/css/scss/_idea_details.scss
@@ -11,18 +11,25 @@
         margin-top: 1rem;
         display: grid;
         grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+
 
         &--item {
             justify-self: center;
+
+            &--left {
+                justify-self: right;
+            }
+
+            &--right {
+                justify-self: left;
+            }
         }
-    }
 
-    &__edit-image {
-        display: grid;
-        padding: 1rem 0;
-
-        &--item {
-            justify-self: center;           
+        &--delete {
+            grid-row: 2;
+            grid-column: 1/3;
+            justify-self: center;
         }
     }
 
