--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -9,30 +9,31 @@
 {% block content %}
 <div class="idea-details">
 
-    <!-- Edit idea: only visible for idea owner and admin -->
+    <h1>{{idea.idea_title}}</h1>
+    <img class="image-container__detail" src="{{ url_for('file', filename=idea.image_name) }}" max-width="800"
+        height="300">
+
+    <!-- Edit: only visible for idea owner and admin -->
     {% if (idea.username == session["username"]) or (session["username"] == "Master") %}
     <div class="idea-details__edit-idea">
-        <div class="idea-details__edit-idea--item">
+        <div class="idea-details__edit-idea--item--left">
             <a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn-secundary">edit
                 idea</a>
         </div>
-        <div class="idea-details__edit-idea--item">
+        <div class="idea-details__edit-idea--item--right">
+            <a class="waves-effect waves-light modal-trigger btn-secundary" href="#modal1">Edit
+                picture</a>
+        </div>
+        <div class="idea-details__edit-idea--delete">
             <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn-secundary">delete
                 idea</a>
         </div>
     </div>
     {% endif %}
 
-    <h1>{{idea.idea_title}}</h1>
-    <img class="image-container__detail" src="{{ url_for('file', filename=idea.image_name) }}" max-width="800"
-        height="300">
 
-    <!-- Edit image: only visible for idea owner and admin -->
     {% if (idea.username == session["username"]) or (session["username"] == "Master") %}
-    <div class="idea-details__edit-image">
-        <a class="modal-trigger btn-secundary idea-details__edit-image--item" href="#modal1">Edit
-            picture</a>
-    </div>
+
     {% endif %}
 
     <div class="divider"></div>
