Finish mobile styling edit img modal.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -574,4 +574,19 @@ h5 {
   margin-top: 3rem;
 }
 
+.modal {
+  max-height: 80%;
+  width: 90%;
+}
+.modal h4 {
+  text-align: center;
+}
+
+.modal-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 2rem;
+}
+
 /*# sourceMappingURL=override.css.map */
