--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -8,6 +8,10 @@ header {
     margin-bottom: 5rem;
 }
 
+.container {
+    margin-top: 8rem;
+}
+
 .wrapper {
     width: 800px;
     margin: 0 auto;
