--- a/static/css/scss/_user.scss
+++ b/static/css/scss/_user.scss
@@ -13,3 +13,14 @@
     text-align: center;
 
 }
+
+// Account :required.
+.account-required {
+    display: grid;
+
+    .btn {
+        max-width: 250px;
+        justify-self: center;
+    }
+}
+
