--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -5,7 +5,7 @@
     </div>
     <div class="site-nav__overlay">
         <div class="site-nav__overlay-content">
-            <img class="logo" src="../static/images/chingu-logo-cropped.png" alt="logo">
+            <a href="{{url_for('home')}}"><img class="logo" src="static/images/chingu-logo-cropped.png" alt="logo"></a>
             <nav class="primary-nav">
                 <ul>
                     <li><a href="{{url_for('home')}}">Home</a></li>
@@ -31,6 +31,6 @@
             </div>
         </div>
     </div>
-    <img class="logo" src="static/images/chingu-logo-cropped.png" alt="">
+    <a href="{{url_for('home')}}"><img class="logo" src="static/images/chingu-logo-cropped.png" alt="logo"></a>
 </div>
 {% endblock %}
