--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -21,14 +21,14 @@
                     {% endif %}
                 </ul>
             </nav>
-            <div class="site-nav__overlay-subscribe">
+            <!-- <div class="site-nav__overlay-subscribe">
                 <h3 class="section-title">
                     Never miss out
                 </h3>
                 <p>
                     Get news, new surveys and results delivered in your inbox!
                 </p>
-            </div>
+            </div> -->
         </div>
     </div>
     <a href="{{url_for('home')}}"><img class="logo" src="static/images/chingu-logo-cropped.png" alt="logo"></a>
