--- a/static/css/override.css
+++ b/static/css/override.css
@@ -369,7 +369,7 @@ nav {
 }
 
 .primary-nav {
-  padding-top: 1rem;
+  padding-top: 5rem;
 }
 .primary-nav ul {
   list-style: none;
@@ -377,8 +377,7 @@ nav {
   padding: 0;
 }
 .primary-nav ul li {
-  margin-bottom: 1em;
-  margin-left: 1em;
+  float: none;
 }
 .primary-nav ul a {
   text-decoration: none;
