Finish styling mobile menu - forgot to save one file.

--- a/static/css/scss/_nav.scss
+++ b/static/css/scss/_nav.scss
@@ -15,7 +15,7 @@ nav {
         padding: 0;
 
         li {
-            float: none;
+            float: none; //Offset Materialize styling
         }
 
         a {
