--- a/static/css/scss/_search_sort.scss
+++ b/static/css/scss/_search_sort.scss
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 1rem;
 
-    &__input-field {
+    .input-field {
 
         margin: 0 0 1rem 0;
         
