--- a/static/css/override.css
+++ b/static/css/override.css
@@ -557,10 +557,10 @@ h5 {
   width: 100px;
 }
 
-.edit-idea {
+.edit-idea, .add-idea {
   display: grid;
 }
-.edit-idea__cta {
+.edit-idea__cta, .add-idea__cta {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 3rem;
