--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -1,109 +1,77 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<h1>Add idea</h1>
-<div class="row">
+
+<div class="add-idea">
+    <h3>Add idea</h3>
+
     <form action="{{ url_for('insert_idea') }}" method="POST" class="col s12" enctype="multipart/form-data">
 
         <!-- Set idea name -->
-        <div class=" row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">assignment</i>
-                    <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50"
-                        maxlength="50"></textarea></textarea>
-                    <label for="icon_prefix">Idea Name (max. 50 characters)</label>
-                </div>
-            </div>
-        </div>
-
-        <!-- Set category -->
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">poll</i>
-                    <select id="category" name="category_name">
-                        <option value="" disabled selected>Choose Category</option>
-                        {% for category in categories %}
-                        <option value="{{category.category_name}}">{{category.category_name}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Select a category for your idea</label>
-                </div>
-            </div>
+        <div class="input-field">
+            <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50"
+                maxlength="50"></textarea></textarea>
+            <label>Idea Name (max. 50 characters)</label>
         </div>
 
         <!-- Set short description -->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">subject</i>
-                <textarea name="idea_summary" id="textarea2" class="materialize-textarea" data-length="120"
-                    maxlength="120"></textarea>
-                <label for="icon_telephone">Describe your idea in a short sentence (max. 130 characters)</label>
-            </div>
+        <div class="input-field">
+            <textarea name="idea_summary" id="textarea2" class="materialize-textarea" data-length="120"
+                maxlength="120"></textarea>
+            <label>Describe your idea in a short sentence (max. 130 characters)</label>
         </div>
 
         <!-- Set details -->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">subject</i>
-                <textarea name="idea_details" id="textarea3" class="materialize-textarea" data-length="1000"
-                    maxlength="1000"></textarea>
-                <label for="icon_telephone">Idea Details</label>
-            </div>
+        <div class="input-field">
+            <textarea name="idea_details" id="textarea3" class="materialize-textarea" data-length="1000"
+                maxlength="1000"></textarea>
+            <label>Idea Details</label>
         </div>
 
         <!-- Select image -->
-        <div class="row">
-
-            <div class="input-field col s12">
-                <input type="file" name="image" id="image">
-            </div>
+        <div class="input-field col s12">
+            <input type="file" name="image" id="image">
         </div>
-        <br><br><br>
+
+
+        <!-- Set category -->
+        <div class="input-field">
+            <select id="category" name="category_name">
+                <option value="" disabled selected>Choose Category</option>
+                {% for category in categories %}
+                <option value="{{category.category_name}}">{{category.category_name}}</option>
+                {% endfor %}
+            </select>
+            <label>Select a category for your idea</label>
+        </div>
 
         <!-- Set tags -->
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">poll</i>
-                    <select id="idea_tags1" name="idea_tag1">
-                        <option value="" disabled selected>Choose tag</option>
-                        {% for tag in all_tags %}
-                        <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Select a tag for your idea</label>
-                </div>
-            </div>
+        <div class="input-field">
+            <select id="idea_tags1" name="idea_tag1">
+                <option value="" disabled selected>Choose tag</option>
+                {% for tag in all_tags %}
+                <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
+                {% endfor %}
+            </select>
+            <label>Select a tag for your idea</label>
         </div>
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">poll</i>
-                    <select id="idea_tags2" name="idea_tag2">
-                        <option value="" disabled selected>Choose tag</option>
-                        {% for tag2 in all_tags_two %}
-                        <option value="{{tag2.tag_name}}">{{tag2.tag_name}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Select a tag for your idea</label>
-                </div>
-            </div>
+        <div class="input-field">
+            <select id="idea_tags2" name="idea_tag2">
+                <option value="" disabled selected>Choose tag</option>
+                {% for tag2 in all_tags_two %}
+                <option value="{{tag2.tag_name}}">{{tag2.tag_name}}</option>
+                {% endfor %}
+            </select>
+            <label>Select a tag for your idea</label>
         </div>
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">poll</i>
-                    <select id="idea_tags3" name="idea_tag3">
-                        <option value="" disabled selected>Choose tag</option>
-                        {% for tag3 in all_tags_three %}
-                        <option value="{{tag3.tag_name}}">{{tag3.tag_name}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Select a tag for your idea</label>
-                </div>
-            </div>
+        <div class="input-field">
+            <select id="idea_tags3" name="idea_tag3">
+                <option value="" disabled selected>Choose tag</option>
+                {% for tag3 in all_tags_three %}
+                <option value="{{tag3.tag_name}}">{{tag3.tag_name}}</option>
+                {% endfor %}
+            </select>
+            <label>Select a tag for your idea</label>
         </div>
 
         <!-- Fixed username -->
@@ -117,15 +85,17 @@
             <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
                 value="{{session['username']}}">
         </div>
-        <div class="row">
+
+        <div class="add-idea__cta">
             <button class="btn waves-effect waves-light" type="submit">
                 Add Idea
-                <i class="material-icons right">playlist_add</i>
             </button>
+            <a href="{{url_for('ideas')}}" class="waves-effect waves-light btn-secundary">cancel</a>
         </div>
     </form>
-
 </div>
+
+
 
 
 {% endblock %}
