Remove account page. Updated navigation accordingly.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -381,8 +381,11 @@ nav {
 }
 .primary-nav ul a {
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   text-transform: uppercase;
+  color: black;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
 }
 
 .site-nav {
@@ -461,18 +464,21 @@ nav {
 }
 .site-nav__overlay-content {
   position: relative;
-  /* top: 25%; */
   width: 100%;
   text-align: center;
-  /* margin-top: 30px; */
+}
+.site-nav__overlay-content p {
+  margin-top: 3rem;
+}
+.site-nav__overlay-content h5 {
+  font-size: 1.5rem;
+  line-height: normal;
+  padding: 0;
+  margin: 0;
 }
 .site-nav__overlay a {
-  padding: 8px;
   text-decoration: none;
-  color: black;
-  font-size: 36px;
-  display: block;
-  transition: 0.3s;
+  font-size: 1rem;
 }
 .site-nav__overlay a:hover, .site-nav .overlay a:focus {
   color: #e84d74;
