Start creating top-3 voted projects. Too much time involved. Now only #1 voted project. No carousel, just one project.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -492,9 +492,13 @@ nav {
 
 .carousel {
   margin-top: 0rem;
+  height: 400px;
 }
 .carousel .carousel-item {
   background-color: white;
+}
+.carousel .carousel-item .card {
+  width: 80%;
 }
 
 .hero-home {
