--- a/static/css/scss/_ideas.scss
+++ b/static/css/scss/_ideas.scss
@@ -1,10 +1,14 @@
 .carousel {
     margin-top: 0rem;
-    
+    height: 400px;    
 
     .carousel-item {
-        
         background-color: white;
+
+        .card {
+            width: 80%;
+        }
+
     }
 
 }
