--- a/static/css/scss/_ideas.scss
+++ b/static/css/scss/_ideas.scss
@@ -1,16 +1,16 @@
-.carousel {
-    margin-top: 0rem;
-    height: 400px;    
+// .carousel {
+//     margin-top: 0rem;
+//     height: 400px;    
 
-    .carousel-item {
-        background-color: white;
+//     .carousel-item {
+//         background-color: white;
 
-        .card {
-            width: 80%;
-        }
+//         .card {
+//             width: 80%;
+//         }
 
-    }
+//     }
 
-}
+// }
 
 
