--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -1,11 +1,48 @@
 {% extends 'layouts/base.html' %}
 {% block hero %}
 <div class="hero-ideas">
-  {% include 'components/idea_carousel.html' %}
-  <div class="hero-ideas__cta-bar">
-    <h6 class="hero-ideas__cta-bar--text">Do you have an idea? Let the world know!</h6><a href="{{url_for('addidea')}}"
-      class="waves-effect waves-light btn hero-ideas__cta-bar--btn">add idea</a>
-  </div>
+  <h3 class=hero-ideas__heading>Best idea</h3>
+  <h5>Most <span class="bold">votes</span> to date</h5>
+
+  <a href="{{url_for('idea_details', idea_id=votes._id)}}">
+    <div class="card">
+      <div class="card-image">
+        <img src="{{ url_for('file', filename=votes.image_name) }}">
+        <span class="card-title">{{votes.idea_title}}</span>
+      </div>
+      <div class="card-content">
+        <div class="grid-wrapper">
+          <div class="card-grid-front">
+            <div class="card-grid-front__fr1 hero-ideas__grid">
+              <i class="material-icons">thumb_up</i>
+            </div>
+            <div class="card-grid-front__fr2">
+              <p>{{votes.total_votes}}</p>
+            </div>
+            <div class="card-grid-front__fr3 hero-ideas__grid">
+              <i class="material-icons">visibility</i>
+            </div>
+            <div class="card-grid-front__fr4">
+              <p>{{votes.views}}</p>
+            </div>
+            <div class="card-grid-front__row2--left">
+              votes
+            </div>
+            <div class="card-grid-front__row2--right">
+              views
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+</div>
+
+<div class="hero-ideas__cta-bar">
+  <h6 class="hero-ideas__cta-bar--text">Do you have an idea? Let the world know!</h6><a href="{{url_for('addidea')}}"
+    class="waves-effect waves-light btn hero-ideas__cta-bar--btn">add idea</a>
+</div>
 </div>
 {% endblock %}
 
