--- a/static/css/override.css
+++ b/static/css/override.css
@@ -285,10 +285,12 @@ textarea.materialize-textarea:focus:not([readonly]) {
   grid-row: 2;
   grid-column: 2;
   background-color: #86B3D0;
+  color: white;
   text-align: center;
   padding: 0.5rem;
   line-height: 2rem;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  border: none;
 }
 .idea-details__tags {
   display: grid;
