--- a/static/css/override.css
+++ b/static/css/override.css
@@ -184,6 +184,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
   font-size: 1rem;
   padding: 0.5rem 1rem;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  border: none;
 }
 .card-reveal-grid__row7 {
   text-align: center;
@@ -203,8 +204,12 @@ textarea.materialize-textarea:focus:not([readonly]) {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .card-reveal-grid__row9 {
+  display: grid;
   padding-top: 2rem;
   font-size: 1rem;
+  justify-self: center;
+}
+.card-reveal-grid__row9--item {
   justify-self: center;
 }
 
