--- a/static/css/scss/_idea_card.scss
+++ b/static/css/scss/_idea_card.scss
@@ -81,6 +81,7 @@
             font-size: 1rem;
             padding: 0.5rem 1rem;
             box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+            border: none;
         }
     }
 
@@ -106,8 +107,13 @@
     }
 
     &__row9 {
+        display: grid;
         padding-top: 2rem;
         font-size: 1rem;
         justify-self: center;
+
+        &--item {
+            justify-self: center;
+        }
     }
 }
